Fix z-index issue with the datepicker popover in batch edit

--- a/apps/timetable/admin/ui/css/admin.css
+++ b/apps/timetable/admin/ui/css/admin.css
@@ -73,6 +73,7 @@
     margin-top: -5px;
     min-width: 450px !important;
     padding: 5px 5px 20px;
+    z-index: 10000;
 }
 
 
